--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+body {
+  background: linear-gradient(120deg, #dce3ee, #cef2f3);
+  font-family: 'Poppins', sans-serif;
+  min-height: 100vh;
+}
+
+.container {
+  max-width: 1200px;
+  min-height: 100vh;
+}
+
+.header {
+  font-size: 1.5rem;
+  flex-direction: column;
+}
+
+.header h1 {
+  font-weight: 600;
+  margin-top: 2rem;
+}
+
+header,
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  margin: 1rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+}
+
+.form-wrapper {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.todo-form {
+  width: 100%;
+}
+
+form .todo-input,
+form .todo-button {
+  padding: 1rem;
+  font-size: clamp(1rem, 1.5rem, 8vw);
+  border: none;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 6px 3px 9px 1px rgba(0, 0, 0, 0.3);
+  transition: all 0.5s ease;
+}
+
+form .todo-input {
+  flex-grow: 1;
+}
+
+form .todo-button {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 0.5rem 1rem;
+}
+
+form .todo-button:hover {
+  background-color: #297074;
+  color: #ffffff;
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-container .todo-list {
+  max-width: 350px;
+  width: 100%;
+  list-style: none;
+}
+
+.todo-container .todo-list .todo {
+  margin: 0.5rem;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: none;
+  box-shadow: 6px 3px 9px 1px rgba(0, 0, 0, 0.3);
+}
+
+.todo-container .todo-list .todo .todo-item {
+  flex: 1;
+  padding: 0 0.5rem;
+}
+
+.todo-container .todo-list .todo .complete-btn {
+  background-color: #297074;
+}
+
+.todo-container .todo-list .todo .trash-btn {
+  background-color: #ca2836;
+}
+
+.todo-container .todo-list .todo .complete-btn,
+.todo-container .todo-list .todo .trash-btn {
+  border: none;
+  padding: 1rem;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.fa-trash,
+.fa-check {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.fall {
+  transform: translateY(10rem) rotateZ(20deg);
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+select {
+  appearance: none;
+  outline: none;
+  border: none;
+  color: #297074;
+  width: 10rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 30px;
+  box-shadow: 6px 3px 9px 1px rgba(0, 0, 0, 0.3);
+}
+
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  width: 40px;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  top: 0;
+  right: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+  font-size: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.select:hover::after {
+  color: #ffffff;
+  background-color: #297074;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
